LPDEV-723 fix blurring

--- a/assets/scss/partials/_page_tab.scss
+++ b/assets/scss/partials/_page_tab.scss
@@ -32,3 +32,10 @@
     }
   }
 }
+
+.body--menu_opened {
+  .page_tab {
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+  }
+}
